[package]
name = "crank"
version = "0.2.0"
edition = "2018"

[[bin]]
name = "crank"
path = "src/main.rs"

[dependencies]
# 1be91f2863d8ecede32daaae7e768034e24bbc79 == v0.4.0 commit
serum_dex = { git = "https://github.com/project-serum/serum-dex.git", rev = "1be91f2863d8ecede32daaae7e768034e24bbc79", default-features = false, features = ["client"] }
spl-token = { version = "3.0.0-pre1", features = ["no-entrypoint"], default-features = false }
clap = "2.33.3"
enumflags2 = "0.6.4"
solana-client = "1.6.18"
solana-sdk = "1.6.18"
anyhow = "1.0.43"
rand = "0.7.3"
safe-transmute = "0.11.0"
log = "0.4"
tokio = { version = "1.8.0", features = ["rt-multi-thread"] }
jemallocator = "0.3.2"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
simplelog = "0.10.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.5"
crossbeam-queue = "0.3.2"
signal-hook = "0.3.9"
dashmap = "4.0.2"
[profile.release]
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
